--- a/django/user_info/templates/user_info/reset_password.html
+++ b/django/user_info/templates/user_info/reset_password.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Asha Software | Register</title>
+    <title>Asha Software | Reset Password</title>
     {% load static %}
     <!-- Load CSS files -->
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
@@ -30,30 +30,36 @@
             <div class="form-holder">
                 <div class="form-content">
                     <div class="form-items">
-                        <h3>Fact Verification System</h3>
-                        <p>Register to leverage AI to uncover the truth in digital media</p>
-                        <div class="page-links">
-                            <a href="{% url 'signin' %}">Login</a><a href="{% url 'signup' %}" class="active">Register</a>
+                        <h3>Reset Your Password</h3>
+                        <p>Please enter your new password below.</p>
+                        {% if error %}
+                        <div class="alert alert-danger">
+                            {{ error }}
                         </div>
-                        <form action="{% url 'signup' %}" method="POST">
-                            {% csrf_token %}
-                            {% if error %}
+                        {% endif %}
+                        {% if success %}
+                        <div class="alert alert-success">
+                            {{ success }}
+                        </div>
+                        {% endif %}
+                        {% if expired %}
                             <div class="alert alert-danger">
-                                {{ error }}
+                                <p>This password reset link has expired or is invalid.</p>
+                                <p>Please request a new password reset link.</p>
                             </div>
-                            {% endif %}
-                            {% if success %}
-                            <div class="alert alert-success">
-                                {{ success }}
-                            </div>
-                            {% endif %}
-                            <input class="form-control" type="text" name="user_name" placeholder="Username" required>
-                            <input class="form-control" type="email" name="email" placeholder="E-mail Address" required>
-                            <input class="form-control" type="password" name="password" placeholder="Password" required>
                             <div class="form-button">
-                                <button id="submit" type="submit" class="ibtn">Register</button>
+                                <a href="{% url 'forgot' %}" class="ibtn">Request New Link</a>
                             </div>
-                        </form>
+                        {% else %}
+                            <form action="{% url 'reset_password' token=token %}" method="POST">
+                                {% csrf_token %}
+                                <input class="form-control" type="password" name="password" placeholder="New Password" required>
+                                <input class="form-control" type="password" name="confirm_password" placeholder="Confirm Password" required>
+                                <div class="form-button">
+                                    <button id="submit" type="submit" class="ibtn">Reset Password</button>
+                                </div>
+                            </form>
+                        {% endif %}
                     </div>
                 </div>
             </div>
