--- a/django/user_info/templates/user_info/tool_form.html
+++ b/django/user_info/templates/user_info/tool_form.html
@@ -55,6 +55,14 @@
                 </a>
             </div>
 
+            {% if messages %}
+                {% for message in messages %}
+                    <div class="alert alert-{{ message.tags }}" style="background: rgba(40, 40, 40, 0.9); color: white;">
+                        {{ message }}
+                    </div>
+                {% endfor %}
+            {% endif %}
+
             {% if form.errors %}
                 <div class="alert alert-danger">
                     <h4 class="alert-heading">Please correct the errors below:</h4>
