verify if tool name has any conflicts with the builtin tools

--- a/django/user_info/templates/user_info/apikey_confirm_delete.html
+++ b/django/user_info/templates/user_info/apikey_confirm_delete.html
@@ -48,10 +48,10 @@
                     <span>History</span>
                 </a>
                 <a href="{% url 'tool_list' %}" class="nav-link">
-                    <span>My Tools</span>
+                    <span>Tools</span>
                 </a>
                 <a href="{% url 'apikey_list' %}" class="nav-link active">
-                    <span>My API Keys</span>
+                    <span>API Keys</span>
                 </a>
             </div>
 
